try catch block added for getDataById

--- a/contactsProject/frontend/index.html
+++ b/contactsProject/frontend/index.html
@@ -10,14 +10,14 @@
 <body>
     <h1>Succsesfull Conection!</h1>
     <p>Express serving folder 'frontend'.</p>
-    <p>try first endpoint /friends after localhost:8080</p>
+    <p>try first endpoint /friends/:id after localhost:8080</p>
     <ul>
         <li>
-            <a href="http://localhost:8080/friends">http://localhost:8080/friends</a>
+            <a href="http://localhost:8080/friends/6904d05efad0a4cd7520ba42">http://localhost:8080/friends/:id</a>
         </li>
     </ul>
     
-    <p>try second endpoint /friends/all after localhost:8080</p>
+    <p>try second endpoint /all after localhost:8080</p>
     <ul>
         <li>
             <a href="http://localhost:8080/friends/all">http://localhost:8080/friends/all</a>
