--- a/contactsProject/frontend/index.html
+++ b/contactsProject/frontend/index.html
@@ -10,17 +10,17 @@
 <body>
     <h1>Succsesfull Conection!</h1>
     <p>Express serving folder 'frontend'.</p>
-    <p>try first endpoint /friends/:id after localhost:8080</p>
+    <p>try first endpoint</p>
     <ul>
         <li>
-            <a href="http://localhost:8080/friends/6904d05efad0a4cd7520ba42">http://localhost:8080/friends/:id</a>
+            <a href="https://cse341assignmentsrepository.onrender.com/">Get friend by id</a>
         </li>
     </ul>
     
-    <p>try second endpoint /all after localhost:8080</p>
+    <p>try second endpoint</p>
     <ul>
         <li>
-            <a href="http://localhost:8080/friends/all">http://localhost:8080/friends/all</a>
+            <a href="https://cse341assignmentsrepository.onrender.com/all">Get all friends</a>
         </li>
     </ul>
 
