--- a/contactsProject/frontend/index.html
+++ b/contactsProject/frontend/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>Succsesfull Conection!</h1>
+    <h1>Succsesfull Conection Endpoints!</h1>
     <p>Express serving folder 'frontend'.</p>
     <p>try first endpoint</p>
     <ul>
