--- a/contactsProject/frontend/index.html
+++ b/contactsProject/frontend/index.html
@@ -13,14 +13,14 @@
     <p>try first endpoint</p>
     <ul>
         <li>
-            <a href="https://cse341assignmentsrepository.onrender.com/">Get friend by id</a>
+            <a href="http://localhost:8080/6906a9f7094c65eedd60c66a">Get friend by id</a>
         </li>
     </ul>
     
     <p>try second endpoint</p>
     <ul>
         <li>
-            <a href="https://cse341assignmentsrepository.onrender.com/all">Get all friends</a>
+            <a href="http://localhost:8080//all">Get all friends</a>
         </li>
     </ul>
 
