--- a/contactsProject/frontend/index.html
+++ b/contactsProject/frontend/index.html
@@ -20,7 +20,7 @@
     <p>try second endpoint</p>
     <ul>
         <li>
-            <a href="http://localhost:8080//all">Get all friends</a>
+            <a href="http://localhost:8080/all">Get all friends</a>
         </li>
     </ul>
 
