--- a/contactsProject/frontend/index.html
+++ b/contactsProject/frontend/index.html
@@ -13,7 +13,7 @@
     <p>try first endpoint</p>
     <ul>
         <li>
-            <a href="http://localhost:8080/friends/6906a9f7094c65eedd60c66a">Get friends by id</a>
+            <a href="http://localhost:8080/friends/6906a9f7094c65eedd60c66a">Get friends id</a>
         </li>
     </ul>
     
