--- a/contactsProject/frontend/index.html
+++ b/contactsProject/frontend/index.html
@@ -13,14 +13,14 @@
     <p>try first endpoint</p>
     <ul>
         <li>
-            <a href="http://localhost:8080/friends/6906a9f7094c65eedd60c66a">Get friends id</a>
+            <a href="/friends/6906a9f7094c65eedd60c66a">Get friends id</a>
         </li>
     </ul>
     
     <p>try second endpoint</p>
     <ul>
         <li>
-            <a href="http://localhost:8080/friends/all">Get all friends</a>
+            <a href="/friends/all">Get all friends</a>
         </li>
     </ul>
 
