--- a/contactsProject/frontend/index.html
+++ b/contactsProject/frontend/index.html
@@ -37,9 +37,23 @@
             <img class="apidocimg" src="./src/img/apidoc.png" alt="api doc image icon" width="1046" height="1099" loading="lazy">
         </div>
     <section class="docs">
-      <h3>📘 API Documentation</h3>
+      <h3>API Documentation</h3>
       <ul>
-        <li><a href="/api-docs" target="_blank">Acessar Swagger UI</a></li>
+        <li><a href="/api-docs" target="_blank">Access Swagger UI</a></li>
+      </ul>
+    </section>
+    <section class="info">
+      <p class="week"><strong>WEEK 03 and 04</strong></p>
+      <p class="task">Task: <strong>Create a new project of your choosing</strong></p>
+      <p class="project">Project: <strong>Project 2 Part 1 (CRUD Operations)</strong></p>
+    </section>
+        <div>
+            <img class="apidocimg" src="./src/img/project.png" alt="api doc image icon" width="1195" height="1199" loading="lazy">
+        </div>
+    <section class="info">
+      <h3>Project Estevas Garden Cafe</h3>
+      <ul>
+        <li><a href="#" target="_blank">Access my Project</li>
       </ul>
     </section>
 
