--- a/contactsProject/frontend/index.html
+++ b/contactsProject/frontend/index.html
@@ -8,7 +8,7 @@
 <body>
   <main class="container">
     <header>
-      <h1>Succsesfull Conection Endpoints!</h1>
+      <h1>Succsesfull Connection Endpoints!</h1>
       <h2>CSE 341 - Assignments</h2>
     </header>
 
